# nanonama

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  config.html  help.html  idf_component.yml  index.html  main.c  mqtt_simple.c  mqtt_simple.h  ssd1306.c  ssd1306.h  version.h  wifi.html
